# sudoku

./: CMakeLists.txt  README.md
lib/: SDL3.exp  SDL3.lib  SDL3_test.lib
src/: App.h  Sudoku.h  main.cpp  sudoku.h  util.h
